[package]
name = "bullet-client"
version = "0.1.0"
edition = "2021"
authors = ["Min Kang"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bullet-common = { path = "../common" }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]
