[package]
name = "bullet-connect-4-server"
version = "0.1.0"
authors = ["Min Kang <therealminhere@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/MuteMini/bullet-connect-4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
