[package]
name = "bullet-server"
version = "0.1.0"
edition = "2021"
authors = ["Min Kang"]
license = "MIT/Apache-2.0"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
bullet-common = { path = "../common" }
anyhow = "*"
futures = "*"
smol = "1.3.0"
async-tungstenite = "*"
tungstenite = "*"
log = "*"
env_logger = "0.10.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4.0"
chrono = "0.4.23"